# DB-spbstu

./: .clang-format  .gitignore  CMakeLists.txt
config/: db.ini
include/: qtinclude.cmake
include/DB/: connection.hpp
include/DB/GUI/: editorwindow.hpp  error_dialog.hpp  login_dialog.hpp  logswidget.hpp  mainwindow.hpp  profit_dialog.hpp  tablewindow.hpp  topfive_dialog.hpp
include/DB/GUI/tables/: chargesedit_dialog.hpp  expenseitemsedit_dialog.hpp  salesedit_dialog.hpp  warehousesedit_dialog.hpp
include/DB/tables/: charges.hpp  expense_items.hpp  sales.hpp  tables.hpp  users.hpp  warehouses.hpp
include/DB/utility/: log.hpp
scripts/: build.sh
src/: main.cpp  qtsrc.cmake
src/DB/: connection.cpp
src/DB/GUI/: editorwindow.cpp  editorwindow.ui  error_dialog.cpp  error_dialog.ui  login.ui  login_dialog.cpp  logs.ui  logswidget.cpp  mainwindow.cpp  mainwindow.ui  profit_dialog.cpp  profit_dialog.ui  tablewindow.cpp  tablewindow.ui  topfive_dialog.cpp  topfive_dialog.ui
src/DB/GUI/tables/: chargesedit_dialog.cpp  chargesedit_dialog.ui  expenseitemsedit_dialog.cpp  expenseitemsedit_dialog.ui  salesedit_dialog.cpp  salesedit_dialog.ui  warehousesedit_dialog.cpp  warehousesedit_dialog.ui
src/DB/tables/: charges.cpp  expense_items.cpp  sales.cpp  tables.cpp  users.cpp  warehouses.cpp
src/DB/utility/: log.cpp  md5.cpp
